create modules mongoose and .env

--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+DATABASE="file:./dev.db"
+SECRET="7b55f59d034002b5fdb7eee735c8846f"
+MONGODB_URI='mongodb://192.168.100.133:27018/db-nest'
